--- a/ulmus/requirements.txt
+++ b/ulmus/requirements.txt
@@ -24,6 +24,7 @@ lxml==5.2.2
 packaging==24.1
 pillow==10.3.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 reportlab==4.2.0
 setuptools==70.1.0
 six==1.16.0
