included env variables in Dockerfile

--- a/ulmus/Dockerfile
+++ b/ulmus/Dockerfile
@@ -1,17 +1,23 @@
-FROM python:3
+FROM python:3-slim
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
+ENV SECRET_KEY "django-insecure-rq&-hsne!!t#ice*&9g9$5b*#@dyv4r+w!i@7t@4g96901!$t6"
+ENV DB_NAME "ulmus"
+ENV DB_USER "admin"
+ENV DB_PASSWORD "root"
+ENV DB_HOST "localhost"
+ENV DB_PORT "5433"
 
 WORKDIR /ulmus
 
 COPY requirements.txt /ulmus/
 
-RUN pip install --upgrade pip \ && pip install -r requirements.txt
+RUN pip install --upgrade pip \ pip install -r requirements.txt
 
-COPY . /app/
+COPY . /ulmus/
 
-RUN py manage.py collectstatic --noinput
+RUN python manage.py collectstatic --noinput
 
 EXPOSE 8000
 
